xml/tests/testData/xml/DefaultAndFixedInSchema.xsd
<xsd:schema xmlns="http://www.foo.org/test"
            xmlns:xsd="http://www.w3.org/2001/XMLSchema"
            targetNamespace="http://www.foo.org/test"
            elementFormDefault="qualified" attributeFormDefault="unqualified">
  <<error descr="Either 'name' or 'ref' attribute should present"><error descr="Element xsd:element doesn't have required attribute name">xsd:element</error></error>>
    <xsd:complexType>
      <<error descr="Either 'name' or 'ref' attribute should present">xsd:attribute</error> <error descr="'default' and 'fixed' attributes should not be present in the same time">default</error>="aaa" <error descr="'default' and 'fixed' attributes should not be present in the same time">fixed</error>="bbb" />
    </xsd:complexType>
  </<error descr="Either 'name' or 'ref' attribute should present"><error descr="Element xsd:element doesn't have required attribute name">xsd:element</error></error>>
</xsd:schema>